--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
           <div class="text-input">
             <label for="title">Title of the book</label>
-            <input type="text" id="title" name="title">
+            <input type="text" id="title" name="title" required>
           </div>
 
           <div class="text-input">
             <label for="author">Name of the author</label>
-            <input type="text" id="author" name="author">
+            <input type="text" id="author" name="author" required>
           </div>
 
           <div class="text-input">
             <label for="pages">Number of pages</label>
-            <input type="number" id="pages" name="pages">
+            <input type="number" id="pages" name="pages" required>
           </div>
 
         </fieldset>
@@ -42,7 +42,7 @@
 
           <div class="op">
             <div>
-              <input type="radio" id="true" name="read" value="true">
+              <input type="radio" id="true" name="read" value="true" required="required">
               <label for="true">Yes</label>
             </div>
   
